[package]
name = "commitment-pockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
pairing = { version = "0.23.0", optional = true}
group = { version = "0.13.0" }
ff = { version = "0.13.0"}
rand = { version="0.8.5"}
ark-ff = { version = "^0.4.0", default-features = false }
ark-std= { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }

[features]
default = ["pairing"]

[dev-dependencies]
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }